k8s-configs/cluster-tools/logging/elastic-stack/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-elastic
  labels:
    app: fluentd-elastic
spec:
  selector:
    matchLabels:
      app: fluentd-elastic
  template:
    metadata:
      labels:
        app: fluentd-elastic
    spec:
      serviceAccount: fluentd-elastic
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      containers:
      - name: fluentd
        image: fluent/fluentd-kubernetes-daemonset:v1.4.2-debian-elasticsearch-1.1
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - name: kubernetes-namespace-logging
          mountPath: /fluentd/etc/conf.d
          readOnly: true
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 30
      volumes:
      - name: kubernetes-namespace-logging
        configMap:
          name: kubernetes-namespace-logging
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
