k8s-configs/cluster-tools/logging/elastic-stack/elasticsearch.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
spec:
  serviceName: elasticsearch
  replicas: 3
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      affinity:
        podAntiAffinity:
          # Add a hard requirement for each elastic-search pod to be deployed to a different node
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - elasticsearch
            topologyKey: "kubernetes.io/hostname"
          # Add a soft requirement for each elastic-search pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - elasticsearch
              topologyKey: "failure-domain.beta.kubernetes.io/zone"

      containers:

      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0

        securityContext:
          runAsUser: 1000
          runAsGroup: 1000

        resources:
          limits:
            memory: 2Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 100m

        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP

        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
          readOnly: false
        - name: enrichment-shared-volume
          mountPath: /enrichment-shared-volume
          readOnly: false
        - name: enrichment-elasticsearch-yaml-config
          mountPath: /usr/share/elasticsearch/data/config/elasticsearch.yml
          subPath: elasticsearch.yml

      volumes:
        - name: enrichment-shared-volume
          nfs:
            server: ${EFS_FILESYSTEM_ID}.efs.${REGION}.amazonaws.com
            path: /
        - name: enrichment-elasticsearch-yaml-config
          configMap:
            name: enrichment-elasticsearch-yaml-config
            
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: elasticsearch
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: elasticsearch-gp2
      resources:
        requests:
          storage: 40Gi

---
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  clusterIP: None
  ports:
    - port: 9200
      name: rest
    - port: 9300
      name: inter-node
