k8s-configs/cluster-tools/logging/elastic-stack/kibana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.8.0

        ports:
        - containerPort: 5601
          name: http

        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
          requests:
            memory: 512Mi
            cpu: 100m

        volumeMounts:
        - mountPath: /enrichment-shared-volume
          name: enrichment-shared-volume
          readOnly: false

      volumes:
      - name: enrichment-shared-volume
        nfs:
          server: fs-c2e4d068.efs.us-west-2.amazonaws.com
          path: /

---
# This service exposes the Kibana http port to the cluster.
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: http
  selector:
    app: kibana

# ---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   name: kibana-dashboard-upload
# spec:
# template:
#   spec: 
#     containers:
#     - name: kibana-dashboard-upload
#       image: 7es7/enrichment-bootstrap:latest   # gcr.io/ping-identity/ping-cloud-enrichment-bootstrap/ping-cloud-enrichment-bootstrap:7.8.0.1
#       workingDir: /scripts
#       command: ["sh", '$(CONTAINER_NAME).sh']

#       securityContext:
#         privileged: true

#       volumeMounts: 
#       - name: kibana-dashboard-pa
#         mountPath: /scripts/dashboards/pa.ndjson
#       - name: kibana-dashboard-pd
#         mountPath: /scripts/dashboards/pd.ndjson
#       - name: kibana-dashboard-pf
#         mountPath: /scripts/dashboards/pf.ndjson
#       - name: kibana-dashboard-pf-basic
#         mountPath: /scripts/dashboards/pf-basic.ndjson

#     volumes:
#     - name: kibana-dashboard-pa
#       configMap:
#         name: kibana-dashboard-pa 
#     - name: kibana-dashboard-pd
#       configMap:
#         name: kibana-dashboard-pd 
#     - name: kibana-dashboard-pf
#       configMap:
#         name: kibana-dashboard-pf
#     - name: kibana-dashboard-pf-basic
#       configMap:
#         name: kibana-dashboard-pf-basic
