k8s-configs/cluster-tools/logging/elastic-stack/ingress.yaml
# This defines the ingress for the Kibana dashboard
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: kibana
spec:
  tls:
  - hosts:
    - logs-dev.ping-demo.com
    secretName: tls-secret-logging
  rules:
  - host: logs-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the dashboard
        - path: /
          backend:
            serviceName: kibana
            servicePort: 5601
